Documentation finished and fixes applied on movies.router and app.js
